--- a/static/index.html
+++ b/static/index.html
@@ -4,17 +4,36 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>🔗 Links</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/main.css">
+  <meta name="description" content="Personal link management and sharing application">
+  <meta name="theme-color" content="#007bff">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M13.06 8.11l1.415 1.415a7 7 0 010 9.9l-.354.353a7 7 0 01-9.9-9.9l1.415 1.415a5 5 0 000 7.07l.354-.353a5 5 0 017.07-7.07zm6.718 6.718l-1.414-1.414a5 5 0 000-7.07l-.354.352a5 5 0 01-7.07 7.07l1.414 1.415a7 7 0 019.9 0l.354-.353a7 7 0 010-9.9z'/%3E%3C/svg%3E">
 </head>
 <body>
   <div id="app"></div>
   <script type="importmap">
     {
       "imports": {
-        "vue": "/vue.esm-browser.js"
+        "vue": "/assets/js/vendor/vue.esm-browser.js"
       }
     }
   </script>
-  <script type="module" src="/app.js"></script>
+  <script type="module">
+    // Check if user wants public view
+    const urlParams = new URLSearchParams(window.location.search);
+    const viewPublic = urlParams.get('view') === 'public';
+    
+    // Check if user is authenticated
+    const token = localStorage.getItem('token');
+    const user = localStorage.getItem('user');
+    
+    if (viewPublic || !token || !user) {
+      // Show public view (either requested or not authenticated)
+      import('./public.js');
+    } else {
+      // User is authenticated and wants private view, load private app
+      import('./app.js');
+    }
+  </script>
 </body>
 </html>
